--- a/whatsapp_frontend/src/pages/Whatsapp/Whatsapp.css
+++ b/whatsapp_frontend/src/pages/Whatsapp/Whatsapp.css
@@ -4,17 +4,6 @@
     width: 100%;
 }
 
-/* Sidebar fijo */
-.sidebar {
-    width: 55px;
-    height: 100vh;
-    position: fixed;
-    left: 0;
-    top: 0;
-    background-color: #f8f9fa;
-    z-index: 100; /* Mantiene el sidebar sobre otros elementos */
-}
-
 /* WhatsApp Menu fijo */
 .whatsapp-menu-container {
     width: 250px;  /* Ajuste del ancho */
@@ -33,9 +22,27 @@
 }
 
 /* Ajuste del contenido */
-.content {
-    margin-left: 305px; /* 55px (Sidebar) + 250px (WhatsAppMenu) */
+.user-content {
+    margin-left: 305px;
     width: calc(100% - 305px);
     overflow-x: hidden;
     padding: 20px;
+    background: #f8f9fa;
+    border-radius: 8px;
+}
+
+.whatsapp-card {
+    border-radius: 12px;
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+    transition: transform 0.3s ease;
+}
+
+.whatsapp-card:hover {
+    transform: translateY(-5px);
+}
+
+.whatsapp-card h3 {
+    font-size: 2rem;
+    margin-top: 10px;
+    font-weight: bold;
 }
