Changes on view of dashboard user and changes on top bar: added text when the expiration date is reached

--- a/whatsapp_frontend/src/components/Topbar/Topbar.css
+++ b/whatsapp_frontend/src/components/Topbar/Topbar.css
@@ -32,3 +32,12 @@
     display: flex;
     align-items: center;
 }
+
+.big-text {
+    font-size: 0.875rem;
+    font-weight: 500;
+}
+
+.text-danger {
+    color: #ff4d6d !important; /* rojo más llamativo */
+}
